@@ -1,9 +1,8 @@
 /*-------------------------------------------------------------------------
-   sdcc-lib.h - Top level header file for the sdcc libraries that enables
-                target specific features.
+   features.h - Rabbit 3000A specific features.
 
-   Copyright (C) 2004, Maarten Brock, sourceforge.brock@dse.nl
-
+   Copyright (C) 2001, Michael Hope
+   
    This library is free software; you can redistribute it and/or modify it
    under the terms of the GNU General Public License as published by the
    Free Software Foundation; either version 2, or (at your option) any
@@ -27,35 +26,25 @@
    might be covered by the GNU General Public License.
 -------------------------------------------------------------------------*/
 
-#ifndef __SDC51_SDCC_LIB_H
-#define __SDC51_SDCC_LIB_H	1
+#ifndef __SDCC_ASM_R3KA_FEATURES_H
+#define __SDCC_ASM_R3KA_FEATURES_H   1
 
-#if defined(__SDCC_z80)
-#include <asm/z80/features.h>
+#define _REENTRANT
+#define _CODE
+#define _AUTOMEM
+#define _STATMEM
 
-#elif defined(__SDCC_z180)
-#include <asm/z180/features.h>
+#define _SDCC_MANGLES_SUPPORT_FUNS	1
+#define _SDCC_Z80_STYLE_LIB_OPT		1
 
-#elif defined(__SDCC_r2k)
-#include <asm/r2k/features.h>
+/* The following are disabled to make the dhrystone test more authentic.
+ */
+#define _SDCC_PORT_PROVIDES_MEMCPY	0
+#define _SDCC_PORT_PROVIDES_STRCMP	0
+/* Register allocator is as good as hand coded asm.  Cool. */
+#define _SDCC_PORT_PROVIDES_STRCPY	0
 
-#elif defined(__SDCC_r3ka)
-#include <asm/r3ka/features.h>
-
-#elif defined(__SDCC_gbz80)
-#include <asm/gbz80/features.h>
-
-#elif defined(__SDCC_mcs51)
-#include <asm/mcs51/features.h>
-
-#elif defined(__SDCC_ds390)
-#include <asm/ds390/features.h>
-
-#else
-/* PENDING */
-#include <asm/default/features.h>
-
-#endif
+#define _SDCC_MALLOC_TYPE_MLH		1
 
 #endif
 
